--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 </div>
             </div>
             <div>
-                <h3>GUEST</h3>
+                <h3>AWAY</h3>
                 <div class="display">
                     <p class="score" id="guestScore">0</p>
                 </div>
